--- a/index.html
+++ b/index.html
@@ -4,10 +4,63 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Privacy Policy | PABSON</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f9;
+            color: #333;
+        }
+        header {
+            background-color: #4CAF50;
+            color: white;
+            padding: 20px 10px;
+            text-align: center;
+        }
+        header h1 {
+            margin: 0;
+            font-size: 2em;
+        }
+        section {
+            max-width: 800px;
+            margin: 20px auto;
+            background: white;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        }
+        section h2 {
+            color: #4CAF50;
+            font-size: 1.5em;
+            border-bottom: 2px solid #ddd;
+            padding-bottom: 5px;
+            margin-bottom: 15px;
+        }
+        ul {
+            margin: 0;
+            padding: 0 0 0 20px;
+            list-style: disc;
+        }
+        ul li {
+            margin: 10px 0;
+        }
+        p {
+            margin: 10px 0;
+        }
+        footer {
+            text-align: center;
+            padding: 10px 0;
+            background: #333;
+            color: white;
+            margin-top: 20px;
+        }
+    </style>
 </head>
 <body>
     <header>
-        <h1>Privacy Policy for PABSON (Private and Boarding Schools' Organization Nepal)</h1>
+        <h1>Privacy Policy for PABSON</h1>
     </header>
     <section>
         <h2>1. Introduction</h2>
@@ -64,5 +117,8 @@
             We strive to protect your information, but we cannot guarantee absolute security.
         </p>
     </section>
+    <footer>
+        <p>&copy; 2024 PABSON | All Rights Reserved</p>
+    </footer>
 </body>
 </html>
